trying to fix alignment

--- a/styles.css
+++ b/styles.css
@@ -130,13 +130,13 @@ ul.skills {
 }
 .align-left {
   float: left;
-  width:50%;
+  width:48%;
   text-align:left;
   }
 
   .align-right {
-    float: left;
-  width:50%;
+  float: right;
+  width:48%;
   text-align:left;
   }
 footer {
